src/test/kalang-snippets/error/OverrideCheck.kl
method OverrideCheck.myNewMethod() does not override or implement a method from a supertype

class {
    override void myNewMethod() {}
}